# pipeline_report_gen

./: .env.example  .gitignore  README.md  cnvd_docx.py  config.example.json  config.json  export_vuln_funnel_details.py  export_vuln_ids.py  fix_existing_output_excels.py  proposal.md  requirements.txt  zimbra.py
cluster/: software_cluster_summary_v3.csv  software_unique_clustered_v3.csv
edrive/: Instruction.md  login.py
edrive/edrive_anyshare.egg-info/: PKG-INFO  SOURCES.txt
pipeline/: __init__.py  cli.py  config.py  constants.py  dependencies.py  docx_report.py  edrive_upload.py  email_send.py  evidence.py  excel_report.py  formatting.py  mailer.py  mongo.py  output.py  search.py  transfer.py  utils.py  vuln_match.py
plugin/edrive/: edrive.py  pyproject.toml
plugin/report_email/: pyproject.toml
plugin/zimbra/: __init__.py  pyproject.toml  zimbra.py
report_email/: Instruction.md  __init__.py  config.json  send.py
templates/: report.docx  report.xlsx  weekly_disclosure.xlsx
tests/: __init__.py  run.py  test_evidence.py  test_mongo_schema_v2.py  test_pipeline.py  test_vuln_match.py
