[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "report-email"
version = "1.0.0"
description = "SMTP client for sending report emails with a share link in the body"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"report_email" = "."}
packages = ["report_email"]

[tool.setuptools.package-data]
report_email = ["config.json"]
